<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ctItemCustomer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvTypedPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/josefin_sans_medium"
        android:gravity="center"
        android:text="@string/sttbac"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvElectricPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/josefin_sans_medium"
        android:gravity="center"
        android:text="@string/dongia"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvElectricOutput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/josefin_sans_medium"
        android:gravity="center"
        android:text="@string/dientieuthu"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvElectricAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:fontFamily="@font/josefin_sans_medium"
        android:text="@string/thanhtien"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="12sp" />

</LinearLayout>