<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:paddingTop="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputElectricOutput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/so_dien_nang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_medium"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="12"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <mdideas.devapp.tinhtiendienmdapp.extention.PrimaryButtonView
        android:id="@+id/pbvCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="@id/inputElectricOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/inputElectricOutput"
        app:layout_constraintTop_toTopOf="@id/inputElectricOutput"
        app:pb_margin_horizontal="12dp"
        app:pb_margin_vertical="12dp"
        app:pb_text="@string/calculate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/inputElectricOutput">

        <TextView
            android:id="@+id/tvTypedPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="center"
            android:text="@string/sttbac"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvElectricPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="center"
            android:text="@string/dongia"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvElectricOutput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="center"
            android:text="@string/dientieuthu"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvElectricAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="center"
            android:text="@string/thanhtien"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/lnTotalAmount"
        app:layout_constraintTop_toBottomOf="@id/inputElectricOutput" />


    <LinearLayout
        android:id="@+id/lnTotalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvTotalAmountNoVat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="end"
            android:text="@string/total_amount_without_vat"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalAmountVat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="end"
            android:text="@string/total_amount_vat"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:gravity="end"
            android:text="@string/total_amount"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>